log
Mon 17 Oct 2022 01:46:10 AM UTC: 
 tests:  0|4
total_score: 0/70
8fa9d7f
Mon 17 Oct 2022 01:47:37 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
98daa94
Mon 17 Oct 2022 01:52:16 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6d8d60a
Mon 17 Oct 2022 02:07:30 AM UTC: 
 heap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
e57ff33
Mon 17 Oct 2022 02:49:11 AM UTC: 
 heap.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:51:3: error: unknown type name ‘nt’; did you mean ‘int’?
   51 |   nt size= pq->size;
      |   ^~
      |   int
Compilation failed
4f3f5c1
Mon 17 Oct 2022 02:49:30 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
7d8cd44
